# treetask

./: .gitignore  CONTRIBUTING.md  README.md  __init__.py  builder.py  config.py  context.py  core.py  dependencies.py  display.py  executor.py  hooks.py  logging_integration.py  pyproject.toml  renderer.py  serialization.py  strategies.py  test_treetask.py  timing.py
.github/workflows/: tests.yml
tests/: __init__.py  conftest.py  test_builder.py  test_config.py  test_context.py  test_core.py  test_dependencies.py  test_display.py  test_executor.py  test_hooks.py  test_logging.py  test_renderer.py  test_serialization.py  test_strategies.py  test_timing.py
